[tool.poetry]
name = "scsm"
version = "0.2.8"
repository = 'https://github.com/bubylou/scsm'
description = "SteamCMD Server Manager"
authors = ["Nicholas Malcolm <bubylou@pm.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"
include = ["scsm/data/apps/*.yaml"]
packages = [{include = "scsm"}]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
colorama = "^0.4.6"
libtmux = "^0.21.1"
ruamel-yaml = "^0.17.21"
vdf = "^3.4"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.3"
ruff = "^0.0.261"
pytest = "^7.3.1"

[tool.poetry.scripts]
scsm = "scsm.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
